more service cleanup

--- a/INSTALL
+++ b/INSTALL
@@ -3,8 +3,9 @@ sudo apt install postgresql-server-dev-9.6  # for DBD::Pg
 cpanm --sudo --installdeps .
 
 sudo cp support/rtl_fm-scanner.service /etc/systemd/system
+sudo cp support/screen.service /etc/systemd/system
 sudo cp support/ham2mon.service /etc/systemd/system
-# change User= to correct user in both unit files
+# change User= to correct user in all 3 unit files
 
 sudo cp support/ham2mon_start /usr/local/bin
 
@@ -13,6 +14,9 @@ sudo cp support/ham2mon_start /usr/local/bin
 
 sudo systemctl start rtl_fm-scanner
 sudo systemctl enable rtl_fm-scanner
+
+sudo systemctl start screen
+sudo systemctl enable screen
 
 sudo systemctl start ham2mon
 sudo systemctl enable ham2mon
