--- a/INSTALL
+++ b/INSTALL
@@ -8,6 +8,7 @@ sudo cp support/screen@.service /etc/systemd/system
 sudo cp support/ham2mon@.service /etc/systemd/system
 
 sudo cp support/ham2mon_start /usr/local/bin
+sudo cp support/ham2mon /etc/sudoers.d
 
 # requires ham2mon for /cart/ham2mon/apps/lockout.txt
 # ham2mon needs to be running in screen in order to be controlled by rtl_fm-scanner
